Fixes alignment with browser compactablity icons Fixes font size in download buttons

--- a/css/style.css
+++ b/css/style.css
@@ -191,7 +191,7 @@ button, input, select, textarea {
 	border-bottom: 3px solid rgb(229,229,229);
 	color: #000;
 	font-family: Lato, "Open sans";
-	font-size: 1.3rem;
+	font-size: 1rem;
 	font-weight: bold;
 	vertical-align: middle;
 	text-transform: uppercase;
@@ -609,7 +609,7 @@ a.tw-twitter:hover{
 .compatibility .icons{
 	width:35px;
 	height:35px;
-	margin:10px 0px;
+	margin-top:10px;
 	display: inline-block;
 }
 .compatibility .un{background:#000000;opacity:0.3;}
